--- a/12_列表渲染/10.总结Vue数据监测.html
+++ b/12_列表渲染/10.总结Vue数据监测.html
@@ -8,6 +8,31 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
+    <!-- 
+        Vue 监视数据的原理：
+            1。vue会监视data中所有层次的数据
+
+            2.如何监测对象中的数据？
+                通过setter实现监视，且要在new Vue时就传入要监测的数据.
+                    (1).对象中后追加的属性。Vue默认不做响应式处理
+                    （2）。如需给后添加的属性做响应式，请使用以下API：
+                            Vue.set(target,propertyName/index,value)或
+                            vm.$set(target,propertyName/index,value)
+
+            3.如何监测数组中的数据？
+                通过包裹数组更新元素的方法实现，本质就是做了两件事：
+                    （1）调用原生对应的方法对数组进行更新
+                    （2）重新解析模板 ，进而更新页面
+                
+            4.在Vue修改数组中的某个元素一定要用如下方法：
+                1.使用这些API：push(),pop(),shift(),unshift(),splice(),sort(),reverse()
+                2.Vue.set()或vm.$set()
+
+                特别注意：Vue.set()和vm.$set() 不能给 vm 或 vm的根数据对象添加属性！！！
+
+        
+     -->
+
     <!-- 准备一个容器 -->
     <div id="root">
         <h1>学生信息</h1>
@@ -19,6 +44,7 @@
         <button @click="updateFirstFriendName">修改第一个朋友的名字为：张三</button><br>
         <button @click="addHobby">添加一个爱好</button><br>
         <button @click="updateHobby">修改第一个爱好为：开车</button><br>
+        <button @click="removeSmoke">过滤掉爱好中的抽烟</button><br>
 
         <h3>姓名：{{student.name}}</h3>
         <h3 v-if="student.sex">性别：{{student.sex}}</h3>
@@ -49,7 +75,7 @@
             student:{
                 name:'浦京',
                 age:23,
-                hobby:['听音乐','看电影','跑步'],
+                hobby:['听音乐','看电影','跑步','抽烟'],
                 friends:[
                     {name:'jerry',age:35},
                     {name:'tony',age:36}
@@ -75,6 +101,10 @@
                 // this.student.hobby.splice(0,1,'开车')   
                 // Vue.set(this.student.hobby,0,'开车') 
                 vm.$set(this.student.hobby,0,'开车')
+            },
+            removeSmoke(){
+                this.student.hobby = this.student.hobby.filter((h) => {
+                    return h !== '抽烟'})
             }
         },
     })
