--- a/15_内置指令/5.v-pre指令.html
+++ b/15_内置指令/5.v-pre指令.html
@@ -4,37 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>v-cloak指令</title>
+    <title>v-pre</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <style>
-        [v-cloak]{
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <!-- 
-        v-cloak指令（没有值）：
-            1.本质是一个特殊属性，Vue实例创建完毕并接管容器后，会删掉v-cloak属性
-            2.使用css配合 v-cloak可以解决网速慢时页面展示出{{ XXXX}}的问题
+        v-pre指令：
+            1.跳过其他所在节点的编译过程
+            2.可利用他跳过：没有使用指令语法、没有使用插值语法的节点，会加快编译
 
      -->
-
     <div id="root">
-        <h2 v-cloak>{{name}}</h2>
+        <h2 v-pre>Vue其实很简单</h2>
+        <h2>当前的n值是：{{n}}</h2>
+        <button @click="n++">点我n+1</button>
     </div>
 </body>
 
 <script>
     Vue.config.productionTip = false
 
-    new  Vue({
+    new Vue({
         el:'#root',
         data:{
-            name:'尚硅谷'
+            n:34
         }
 
     })
-
 </script>
 </html>
