--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <!-- 针对IE浏览器的一各特殊配置，含义是让IE浏览器以最高的渲染级别渲染页面 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 针对IE浏览器的一各特殊配置，含义是让IE浏览器以最高的渲染级别渲染页面 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 配置页签图标 -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- 配置网页标题 -->
     <title>vue_tests</title>
   </head>
   <body>
+    <!-- 当浏览器不支持js时noscript中的元素就会被渲染 -->
     <noscript>
       <strong>We're sorry but vue_tests doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <!-- 容器 -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
